# contact_base_bot

./: pyproject.toml
src/: companies.db  main.py
